[project]
name = "raven_ai_agent"
version = "0.1.0"
description = "AI Agent for ERPNext with Raymond-Lucy Protocol"
requires-python = ">=3.10"  # v15: 3.10+, v16+: 3.11+/3.12+ depending on bench
dependencies = [
  "openai>=1.0.0",
  "tiktoken>=0.5.0",
  "numpy>=1.24.0",
  "python-socketio[client]>=5.0.0",
  "websocket-client>=1.0.0",
  # PDF processing
  "pymupdf>=1.23.0",
  "pypdf>=3.0.0",
  "Pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/rogerboy38/raven_ai_agent"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[[tool.uv.index]]
url = "http://mirrors.cloud.aliyuncs.com/pypi/simple"
default = true

# Tell bench / Frappe Cloud which Frappe versions this app supports
[tool.bench.frappe-dependencies]
# For Frappe v16+ benches (including v17), this is a safe range:
frappe = ">=16.0.0,<18.0.0"
